[FIX] Add z-index to navbar

--- a/app/main.css
+++ b/app/main.css
@@ -17,6 +17,10 @@
   height: 100%;
 }
 
+.navbar {
+  z-index: 1;
+}
+
 .nav-child-view {
   position: absolute;
   top: 72px; /* based on top nav size */
